tests/test_files/invalid/syntax/module_invalid_module_name.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Module 5123123not_an_identifier
    Struct Location
        type : string
    End
End
